@@ -269,7 +269,8 @@ Library
 -------
 
 - Issue #10946: The distutils commands bdist_dumb, bdist_wininst and bdist_msi
-  now respect a --skip-build option given to bdist.
+  now respect a --skip-build option given to bdist.  The packaging commands
+  were fixed too.
 
 - Issue #12287: Fix a stack corruption in ossaudiodev module when the FD is
   greater than FD_SETSIZE.
